# ClutterEngine

./: .gitignore  CMakeLists.txt
ClutterCore/: CMakeLists.txt
ClutterCore/Libraries/glad/include/glad/: glad.h
ClutterCore/Libraries/glad/src/: glad.c
ClutterCore/include/clt/Core/: EngineContext.h  EntryPoint.h  IWindow.h  Timer.h
ClutterCore/include/clt/Core/ActorComponent/: Actor.h
ClutterCore/include/clt/Core/Application/: Application.h
ClutterCore/include/clt/Core/Debug/: Log.cpp  Log.h
ClutterCore/include/clt/Core/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
ClutterCore/include/clt/Core/Event/Input/: Input.h  InputData.h
ClutterCore/include/clt/Core/Input/: Input.h
ClutterCore/include/clt/Core/Layers/: Layer.h  LayerStack.h
ClutterCore/include/clt/Core/Level/: Level.cpp  Level.h
ClutterCore/include/clt/Core/Math/: Color.h  Math.h  Quaternion.h
ClutterCore/include/clt/Core/Math/Matrix/: Matrix4.h  Matrix4Row.h
ClutterCore/include/clt/Core/Math/Transform/: Transform.h
ClutterCore/include/clt/Core/Math/Vector/: Vector2.h  Vector3.h  Vector4.h
ClutterCore/include/clt/Renderer/: GraphicContext.h  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  Renderer.h  RendererAPI.h
ClutterCore/src/Application/: Application.cpp  Application.h  EntryPoint.h
ClutterCore/src/Application/Layers/: Layer.h  LayerStack.cpp
ClutterCore/src/Core/: Core.h  EngineContext.h
ClutterCore/src/Plateform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLWindow.cpp  OpenGLWindow.h
ClutterCore/src/Plateform/Vulkan/: VulkanContext.cpp  VulkanContext.h
ClutterCore/src/Plateform/Windows/: WindowsWindow.cpp  WindowsWindow.h
ClutterCore/src/Window/: IWindow.h
ClutterCore/src/clt/Core/: Timer.cpp
ClutterCore/src/clt/Core/Application/: Application.cpp
ClutterCore/src/clt/Core/Debug/: Log.cpp
ClutterCore/src/clt/Core/Input/: Input.cpp
ClutterCore/src/clt/Core/Layers/: LayerStack.cpp
ClutterCore/src/clt/Core/Math/: Color.cpp  Quaternion.cpp
ClutterCore/src/clt/Core/Math/Matrix/: Matrix4.cpp  Matrix4Row.cpp
ClutterCore/src/clt/Core/Math/Vector/: Vector2.cpp  Vector3.cpp  Vector4.cpp
ClutterCore/src/clt/Renderer/: Renderer.cpp
ClutterEditor/: CMakeLists.txt
ClutterEditor/include/Layers/: ImGuiLayer.cpp  ImGuiLayer.h
ClutterEditor/src/: EditorApp.cpp  main.cpp
